# rust-difffusion-experimental-

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml  quickstart.sh  verify.sh
config/: default.toml
proto/: diffusion.proto
src/: config.rs  errors.rs  main.rs
src/inference/: mod.rs  pipeline.rs
src/queue/: memory.rs  mod.rs
src/server/: grpc.rs  mod.rs  rest.rs
